--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-Hello World
+<head>
+    <title>Football crazy, chocolate mad</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+    <style>
+.button {
+  margin-left: 1px;
+}
+.button-small {
+  font-size: 0.8rem;
+  height: 2.8rem;
+  line-height: 2.8rem;
+  padding: 0 1.5rem;
+}
+.bold {
+  font-weight: bold;
+}
+.center {
+  text-align: center;
+}
+.row .column.column-30 {
+  flex: 0 0 30%;
+  max-width: 30%;
+}
+.row .column.column-15 {
+  flex: 0 0 15%;
+  max-width: 15%;
+}
+.red {
+  color: red;
+}
+.green {
+  color: green;
+}
+    </style>
+</head>
+<body>
+    <div id="root"></div>
+    <a href="https://github.com/leontrolski/fussball"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+</body>
+<footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.25.0/ramda.min.js"></script>
+    <script src="https://unpkg.com/mithril@1.1.5/mithril.js"></script>
+    <script src="trueskill.js"></script>
+    <script src="main.js" charset="UTF-8"></script>
+</footer>
