--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Football crazy, chocolate mad</title>
+    <title>Lowther ping-pong league</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="stylesheet" href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
