--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
         .block{width:100px;height:50px;float:left;background-color:red;}
     </style>
 </head>
-<body></body>
+<body>
+    <h1>Hi</h1>
+    <p>I'm Oliver Russell, a Python dev (amongst other things) based in London, reach me at ojhrussell<at>gmail.com</p>
+    <p>
+        Here are some of my projects, none of them are particularly prod-ready, just things that have scratched various itches over the years.
+        <ul>
+            <li><a href="https://github.com/leontrolski/immerframe">immerframe</a> a neat way to make deep immutable changes in Python with structural sharing</li>
+            <li><a href="https://github.com/leontrolski/towpath">towpath</a> a js library using proxies to attach paths to values in a nested structure</li>
+            <li><a href="https://github.com/leontrolski/dawdle">dawdle</a> a very half-baked DSL showing how a neat relational language <em>could</em> look like</li>
+            <li><a href="https://github.com/leontrolski/brotz">brotz</a> a respite from Jinja templating inspired by mithril/React</li>
+            <li><a href="https://github.com/leontrolski/fussball">fussball</a> a Bayesian-ly founded table football scoreboard (would work for ping pong too)</li>
+        </ul>
+    </p>
+    <p>Below is a minimalist blocks game, see the page source to see how it works!</p>
+    <div id="blocks"></div>
+</body>
 <footer>
     <script src="https://unpkg.com/mithril@1.1.5/mithril.js"></script>
     <script>
@@ -94,6 +109,6 @@ var View = ()=>m('',
                 style: {'background-color': colourMap[cell.colour]},
                 onclick: cell.isEmpty? _=>_ : _=>setGrid(i, j)
             })))))
-m.mount(document.body, {view: View})
+m.mount(document.getElementById('blocks'), {view: View})
     </script>
 </footer>
