--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Hi</h1>
-    <p>I'm Oliver Russell, a Python dev (amongst other things) based in London, reach me at ojhrussell<at>gmail.com</p>
+    <p>I'm Oliver Russell, a Python dev (amongst other things) based in London, reach me at ojhrussell[at]gmail.com</p>
     <p>
         Here are some of my projects, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
@@ -14,7 +14,7 @@
             <li><a href="https://github.com/leontrolski/towpath">towpath</a> a js library using proxies to attach paths to values in a nested structure</li>
             <li><a href="https://github.com/leontrolski/dawdle">dawdle</a> a very half-baked DSL showing how a neat relational language <em>could</em> look like</li>
             <li><a href="https://github.com/leontrolski/brotz">brotz</a> a respite from Jinja templating inspired by mithril/React</li>
-            <li><a href="https://github.com/leontrolski/fussball">fussball</a> a Bayesian-ly founded table football scoreboard (would work for ping pong too)</li>
+            <li><a href="https://github.com/leontrolski/fussball">fussball</a> a Bayesian-ly founded table-football scoreboard (would work for ping-pong too)</li>
         </ul>
     </p>
     <p>Below is a minimalist blocks game, see the page source to see how it works!</p>
