--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <head>
+    <title>leontrolski - index</title>
     <style>
         .row{display: flex;}
         .block{width:100px;height:50px;float:left;background-color:red;}
+        body {margin: 5% auto; background: #f2f2f2; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff; max-width: 73%;}
+        code {background: white;}
+        a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none;}
+        a:hover {border-bottom: 0;}
     </style>
 </head>
 <body>
@@ -16,6 +21,9 @@
             <li><a href="https://github.com/leontrolski/brotz">brotz</a> a respite from Jinja templating inspired by mithril/React</li>
             <li><a href="https://github.com/leontrolski/fussball">fussball</a> a Bayesian-ly founded table-football scoreboard (would work for ping-pong too)</li>
         </ul>
+    </p>
+    <p>
+        <a href="dreams.html">Here</a> are some blog-like things. 
     </p>
     <p>Below is a minimalist blocks game, see the page source to see how it works!</p>
     <div id="blocks"></div>
