--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <style>
         .row{display: flex;}
         .block{width:100px;height:50px;float:left;background-color:red;}
-        body {margin: 5% auto; background: #f2f2f2; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff; max-width: 73%;}
+        body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff; max-width: 73%;}
         code {background: white;}
         a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none;}
         a:hover {border-bottom: 0;}
@@ -15,11 +15,11 @@
     <p>
         Here are some of my projects, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
-            <li><a href="https://github.com/leontrolski/immerframe">immerframe</a> a neat way to make deep immutable changes in Python with structural sharing</li>
-            <li><a href="https://github.com/leontrolski/towpath">towpath</a> a js library using proxies to attach paths to values in a nested structure</li>
-            <li><a href="https://github.com/leontrolski/dawdle">dawdle</a> a very half-baked DSL showing how a neat relational language <em>could</em> look like</li>
-            <li><a href="https://github.com/leontrolski/brotz">brotz</a> a respite from Jinja templating inspired by mithril/React</li>
-            <li><a href="https://github.com/leontrolski/fussball">fussball</a> a Bayesian-ly founded table-football scoreboard (would work for ping-pong too)</li>
+            <li><a href="https://github.com/leontrolski/immerframe">immerframe</a> - a neat way to make deep immutable changes in Python with structural sharing</li>
+            <li><a href="https://github.com/leontrolski/towpath">towpath</a> - a js library using proxies to attach paths to values in a nested structure</li>
+            <li><a href="https://github.com/leontrolski/dawdle">dawdle</a> - a very half-baked DSL showing how a neat relational language <em>could</em> look like</li>
+            <li><a href="https://github.com/leontrolski/brotz">brotz</a> - a respite from Jinja templating inspired by mithril/React</li>
+            <li><a href="https://github.com/leontrolski/fussball">fussball</a> - a Bayesian-ly founded table-football scoreboard (would work for ping-pong too)</li>
         </ul>
     </p>
     <p>
