--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
     </p>
     <p>
-        <a href="dreams.html">Here</a> are some blog-like things. 
+        <a href="leontrolski.github.io/dreams.html">Here</a> are some blog-like things. 
     </p>
     <p>Below is a minimalist blocks game, see the page source to see how it works!</p>
     <div id="blocks"></div>
