--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
     <h1>Hi</h1>
-    <p>I'm Oliver Russell, a Python dev (amongst other things) based in London, reach me at ojhrussell[at]gmail.com</p>
+    <p>
+        I'm Oliver Russell, a Python dev (amongst other things) based in London, reach me at ojhrussell[at]gmail.com
+    </p>
+    <p>
+        Check out my <a href="https://soundcloud.com/leontrolski/sets/american-songbook">album</a>.
+    </p>
     <p>
         Here are some of my projects, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
@@ -23,7 +28,10 @@
         </ul>
     </p>
     <p>
-        <a href="leontrolski.github.io/dreams.html">Here</a> are some blog-like things. 
+        Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="leontrolski.github.io/fake-data-frame.html">this</a> out.
+    </p>
+    <p>
+        <a href="leontrolski.github.io/dreams.html">Here</a> are some blog-like things.
     </p>
     <p>Below is a minimalist blocks game, see the page source to see how it works!</p>
     <div id="blocks"></div>
@@ -99,7 +107,7 @@ function shiftIntoEmpty(grid){
 }
 var chain = (...fs)=>fs.reduce((a,b)=>x=>b(a(x)))
 // mutates state
-function setGrid(emptyI, emptyJ){  
+function setGrid(emptyI, emptyJ){
     numberOfClicks += 1
     grid = chain(
         grid=>removeCell(grid, emptyI, emptyJ),
@@ -108,7 +116,7 @@ function setGrid(emptyI, emptyJ){
     )(grid)
 }
 // UI
-var View = ()=>m('', 
+var View = ()=>m('',
     m('h1', `clicks: ${numberOfClicks}`),
     grid.every(row=>row.every(cell=>cell.isEmpty))  // game over?
         ? m('marquee', m('h1', 'congrats!'))
