small css fixes

--- a/fake-data-frame.html
+++ b/fake-data-frame.html
@@ -161,7 +161,7 @@
     <pre><code>>>> df['b'] > 7
 &lt;FakeSeries: b {1: 8, 2: 9}></code></pre>
 
-    <pre><code>>>> df['a'][df['b'] > 7])
+    <pre><code>>>> df['a'][df['b'] > 7]
 &lt;FakeSeries: a {1: 5, 2: 6}></code></pre>
 
     <p>
