--- a/dreams.html
+++ b/dreams.html
@@ -2,7 +2,7 @@
     <title>leontrolski - dreams</title>
     <style>
         body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff; max-width: 73%;}
-        code {background: white;}
+        code {background: #f0f0f0;}
         a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none;}
         a:hover {border-bottom: 0;}
     </style>
