--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         .row{display: flex;}
         .block{width:100px;height:50px;float:left;background-color:red;}
         body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff; max-width: 73%;}
-        code {background: white;}
+        code {background: #f0f0f0;}
         a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none;}
         a:hover {border-bottom: 0;}
     </style>
