--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="leontrolski.github.io/fake-data-frame.html">this</a> out.
     </p>
     <p>
-        <a href="leontrolski.github.io/dreams.html">Here</a> are some blog-like things.
+        <a href="leontrolski.github.io/nested-sql.html">Here</a> is a piece about potential nested SQL queries.
     </p>
     <p>Below is a minimalist blocks game, see the page source to see how it works!</p>
     <div id="blocks"></div>
