--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         </ul>
     </p>
     <p>
-        Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="leontrolski.github.io/fake-data-frame.html">this</a> out.
+        Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="fake-data-frame.html">this</a> out.
     </p>
     <p>
-        <a href="leontrolski.github.io/nested-sql.html">Here</a> is a piece about potential nested SQL queries.
+        <a href="nested-sql.html">Here</a> is a piece about potential nested SQL queries.
     </p>
     <p>Below is a minimalist blocks game, see the page source to see how it works!</p>
     <div id="blocks"></div>
