--- a/nested-sql.html
+++ b/nested-sql.html
@@ -1,8 +1,9 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <title>leontrolski - Nested SQL Queries</title>
     <style>
         body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff; max-width: 63%;}
-        @media screen and (max-width: 800px) {.body {font-size: 14px; line-height: 1.4; max-width: 90%;}}
+        @media screen and (max-width: 800px) {body {font-size: 14px; line-height: 1.4; max-width: 90%;}}
         code {background: #f0f0f0;}
         pre {width: 100%; border-top: 3px solid gray; border-bottom: 3px solid gray;}
         a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none;}
