--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <title>leontrolski - index</title>
     <style>
         .row{display: flex;}
         .block{width:100px;height:50px;float:left;background-color:red;}
         body {margin: 5% auto; background: #fff7f7; color: #444444; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff; max-width: 73%;}
+        @media screen and (max-width: 800px) {body {font-size: 14px; line-height: 1.4; max-width: 90%;}}
         code {background: #f0f0f0;}
         a {border-bottom: 1px solid #444444; color: #444444; text-decoration: none;}
         a:hover {border-bottom: 0;}
