--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="fake-data-frame.html">this</a> out.
     </p>
     <p>
+        <a href="poor-mans-object.html">Reach OO/closure nirvana.</a>
+    </p>
+    <p>
         <a href="nested-sql.html">Here</a> is a piece about potential nested SQL queries.
     </p>
     <p>Below is a minimalist blocks game, see the page source to see how it works!</p>
