add-33-line-react

--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
         Check out my <a href="https://soundcloud.com/leontrolski/sets/american-songbook">album</a>.
     </p>
     <p>
+        Here are a series of posts where I reimplement a minimal version of something to demonstrate how it works.
+        <ul>
+            <li>33 line <a href="33-line-react.html">React</a>-like library</li>
+            <li>Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="fake-data-frame.html">this</a> out</li>
+            <li>Reach OO/closure <a href="poor-mans-object.html">nirvana</a></li>
+        </ul>
+    </p>
+    <p>
+        Here are some random thoughts.
+        <ul>
+            <li><a href="nested-sql.html">Here</a> is a piece about potential nested SQL queries</li>
+        </ul>
+    </p>
+    <p>
         Here are some of my projects, none of them are particularly prod-ready, just things that have scratched various itches over the years.
         <ul>
             <li><a href="https://github.com/leontrolski/immerframe">immerframe</a> - a neat way to make deep immutable changes in Python with structural sharing</li>
@@ -28,15 +42,6 @@
             <li><a href="https://github.com/leontrolski/brotz">brotz</a> - a respite from Jinja templating inspired by mithril/React</li>
             <li><a href="https://github.com/leontrolski/fussball">fussball</a> - a Bayesian-ly founded table-football scoreboard (would work for ping-pong too)</li>
         </ul>
-    </p>
-    <p>
-        Ever wondered what the hell is going on with your <code>pandas.DataFrame</code>, check <a href="fake-data-frame.html">this</a> out.
-    </p>
-    <p>
-        <a href="poor-mans-object.html">Reach OO/closure nirvana.</a>
-    </p>
-    <p>
-        <a href="nested-sql.html">Here</a> is a piece about potential nested SQL queries.
     </p>
     <p>Below is a minimalist blocks game, see the page source to see how it works!</p>
     <div id="blocks"></div>
