--- a/33-line-react.html
+++ b/33-line-react.html
@@ -22,7 +22,7 @@
         <a href="https://reactjs.org/">React</a>
         <ul>
             <li>you pass in a function that <em>takes</em> state and <em>returns</em> a virtual DOM (just a tree of plain ol' <code>js</code> objects)</li>
-            <li>renders that virtual DOM as a <em>real</em> DOM in the browser</li>
+            <li>it renders that virtual DOM as a <em>real</em> DOM in the browser</li>
             <li>if you change the state, it runs the function again, this returns a new virtual DOM</li>
             <li>it efficiently updates the real DOM so that it matches the new virtual DOM</li>
         </ul>
