--- a/poor-mans-object.html
+++ b/poor-mans-object.html
@@ -207,7 +207,7 @@ const d = makeDict([
     return init
 }</pre></code>
     <p>
-        It shouldn't be too much of a stretch to image how the interpereter might transform the python-like class:
+        It shouldn't be too much of a stretch to imagine how the interpereter might transform the python-like class:
     </p>
     <pre><code>class Animal(Object){
     const __init__ = (self, name, age)=>{
