add mithril benchmark

--- a/benchmark/mithril.html
+++ b/benchmark/mithril.html
@@ -8,8 +8,8 @@
 <body>
   <div id="App"></div>
   <script src="https://localvoid.github.io/uibench-base/0.1.0/uibench.js"></script>
-  <script src="37-line-react.js"></script>
+  <script src="https://www.unpkg.com/mithril@2.0.4/mithril.min.js"></script>
   <script src="main.js"></script>
-  <script>uibench.init("33-line", "0.0.1")</script>
+  <script>uibench.init("mithril", "2.0.4")</script>
 </body>
 </html>
