--- a/33-line-react.html
+++ b/33-line-react.html
@@ -19,6 +19,9 @@
 <body>
     <h1>33 line React</h1>
     <p>
+        <em><a href="33-line-react-thoughts.html">Thoughts</a> on reading through the hacker news <a href="https://news.ycombinator.com/item?id=22776753">response</a>.</em>
+    </p>
+    <p>
         <a href="https://reactjs.org/">React</a>
         <ul>
             <li>you pass in a function that <em>takes</em> state and <em>returns</em> a virtual DOM (just a tree of plain ol' <code>js</code> objects)</li>
